Create initial header and sections

--- a/index.html
+++ b/index.html
@@ -17,15 +17,23 @@
   </head>
 
   <body>
-    <!--[if IE]>
-      <p class="browserupgrade">
-        You are using an <strong>outdated</strong> browser. Please
-        <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.
-      </p>
-    <![endif]-->
+    <!-- Header Navigation -->
+    <header>
+      <nav></nav>
+    </header>
 
-    <!-- Add your site or application content here -->
-    <p>Hello world! This is the start of my HackerYou Technical Challenge</p>
+    <!-- Hero Section-->
+    <section class="hero"></section>
+
+    <!-- Blog Section-->
+    <section class="blog"></section>
+
+    <!-- Related Posts -->
+    <section class="related-blog"></section>
+
+    <!-- Footer Navigation-->
+    <section></section>
+
     <script src="js/vendor/modernizr-3.7.1.min.js"></script>
   </body>
 </html>
