Create initial navigation

--- a/index.html
+++ b/index.html
@@ -18,8 +18,20 @@
 
   <body>
     <!-- Header Navigation -->
-    <header>
-      <nav></nav>
+    <header cleass="header">
+      <div class="header__logo">
+        <h1>HackerYou</h1>
+      </div>
+
+      <nav class="header__navigation">
+        <ul class>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">Bootcamp</a></li>
+          <li><a href="#">Part-Time</a></li>
+        </ul>
+      </nav>
     </header>
 
     <!-- Hero Section-->
