--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>HackerYou Technical Challenge</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    h
 
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/main.css" />
@@ -30,19 +29,21 @@
   <body>
     <!-- Header Navigation -->
     <header class="header">
-      <div class="header__logo">
-        <h1>HackerYou</h1>
-      </div>
+      <div class="wrapper">
+        <div class="header__logo">
+          <h1>HackerYou</h1>
+        </div>
 
-      <nav class="header__navigation">
-        <ul class>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-          <li><a href="#">Bootcamp</a></li>
-          <li><a href="#">Part-Time</a></li>
-        </ul>
-      </nav>
+        <nav class="header__navigation">
+          <ul class>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Bootcamp</a></li>
+            <li><a href="#">Part-Time</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
 
     <!-- Hero Section-->
