Create initial hero section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link rel="stylesheet" href="css/normalize.css" />
+    <!-- <link rel="stylesheet" href="css/normalize.css" /> -->
     <link rel="stylesheet" href="css/main.css" />
 
     <!-- Google Fonts -->
@@ -47,7 +47,19 @@
     </header>
 
     <!-- Hero Section-->
-    <section class="hero"></section>
+    <section class="hero">
+      <div class="wrapper">
+        <div class="hero__content">
+          <h1>HackerYou Tech Test</h1>
+          <h2>twenty-nineteen</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet
+            consectetur adipiscing elit pellentesque.
+          </p>
+        </div>
+      </div>
+    </section>
 
     <!-- Blog Section-->
     <section class="blog"></section>
