Create initial blog section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
   </head>
 
   <body>
-    <!-- Header Navigation -->
     <header class="header">
       <div class="wrapper">
         <div class="header__logo">
@@ -36,6 +35,7 @@
 
         <nav class="header__navigation">
           <ul class>
+
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
@@ -46,7 +46,6 @@
       </div>
     </header>
 
-    <!-- Hero Section-->
     <section class="hero">
       <div class="wrapper">
         <div class="hero__content">
@@ -55,19 +54,82 @@
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet
-            consectetur adipiscing elit pellentesque.
+            consectetur adipiscing elit pellentesque labore et dolore incididunt
+            ut labore.
           </p>
         </div>
       </div>
     </section>
 
-    <!-- Blog Section-->
-    <section class="blog"></section>
+    <section class="blog">
+      <div class="wrapper">
 
-    <!-- Related Posts -->
+        <div class="blog__header">
+          <h2>Blog</h2>
+        </div>
+
+        <div class="blog__list">
+          <article class="blog__entry">
+            <img src="img/image-2.jpg" />
+            <div class="blog__content">
+                <h3>HackerYou Tech Test</h3>
+                <h4>March 9, 2019</h4>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                  eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet
+                  consectetur adipiscing elit pellentesque labore et dolore
+                  incididunt ut labore.
+                </p>
+            </div>
+            
+          </article>
+
+          <article class="blog__entry">
+            <img src="img/image-3.jpg" />
+            <h3>HackerYou Tech Test</h3>
+            <h4>March 9, 2019</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet
+              consectetur adipiscing elit pellentesque labore et dolore
+              incididunt ut labore.
+            </p>
+          </article>
+
+          <article class="blog__entry">
+            <img src="img/image-4.jpg" />
+            <div>
+              <h3>HackerYou Tech Test</h3>
+              <h4>March 9, 2019</h4>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet
+                consectetur adipiscing elit pellentesque labore et dolore
+                incididunt ut labore. Amet
+                consectetur adipiscing elit pellentesque labore et dolore
+                incididunt ut labore.
+              </p>
+              </div>
+          </article>
+
+          <article class="blog__entry">
+            <img src="img/image-5.jpg" />
+            <div class="blog__content">
+            <h3>HackerYou Tech Test</h3>
+            <h4>March 9, 2019</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet
+              consectetur adipiscing elit pellentesque labore et dolore
+              incididunt ut labore.
+            </p>
+          </div>
+          </article>
+      </div>
+    </section>
+
     <section class="related-blog"></section>
 
-    <!-- Footer Navigation-->
     <section></section>
 
     <script src="js/vendor/modernizr-3.7.1.min.js"></script>
