Fix HTML formatting

--- a/index.html
+++ b/index.html
@@ -35,12 +35,21 @@
 
         <nav class="header__navigation">
           <ul class>
-
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Bootcamp</a></li>
-            <li><a href="#">Part-Time</a></li>
+            <li>
+              <a href="#">Home</a>
+            </li>
+            <li>
+              <a href="#">About</a>
+            </li>
+            <li>
+              <a href="#">Contact</a>
+            </li>
+            <li>
+              <a href="#">Bootcamp</a>
+            </li>
+            <li>
+              <a href="#">Part-Time</a>
+            </li>
           </ul>
         </nav>
       </div>
@@ -63,58 +72,15 @@
 
     <section class="blog">
       <div class="wrapper">
-
         <div class="blog__header">
           <h2>Blog</h2>
         </div>
+      </div>
 
-        <div class="blog__list">
-          <article class="blog__entry">
-            <img src="img/image-2.jpg" />
-            <div class="blog__content">
-                <h3>HackerYou Tech Test</h3>
-                <h4>March 9, 2019</h4>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                  eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet
-                  consectetur adipiscing elit pellentesque labore et dolore
-                  incididunt ut labore.
-                </p>
-            </div>
-            
-          </article>
-
-          <article class="blog__entry">
-            <img src="img/image-3.jpg" />
-            <h3>HackerYou Tech Test</h3>
-            <h4>March 9, 2019</h4>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet
-              consectetur adipiscing elit pellentesque labore et dolore
-              incididunt ut labore.
-            </p>
-          </article>
-
-          <article class="blog__entry">
-            <img src="img/image-4.jpg" />
-            <div>
-              <h3>HackerYou Tech Test</h3>
-              <h4>March 9, 2019</h4>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet
-                consectetur adipiscing elit pellentesque labore et dolore
-                incididunt ut labore. Amet
-                consectetur adipiscing elit pellentesque labore et dolore
-                incididunt ut labore.
-              </p>
-              </div>
-          </article>
-
-          <article class="blog__entry">
-            <img src="img/image-5.jpg" />
-            <div class="blog__content">
+      <div class="blog__list">
+        <article class="blog__entry">
+          <img src="img/image-2.jpg" />
+          <div class="blog__content">
             <h3>HackerYou Tech Test</h3>
             <h4>March 9, 2019</h4>
             <p>
@@ -124,7 +90,48 @@
               incididunt ut labore.
             </p>
           </div>
-          </article>
+        </article>
+
+        <article class="blog__entry">
+          <img src="img/image-3.jpg" />
+          <h3>HackerYou Tech Test</h3>
+          <h4>March 9, 2019</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet
+            consectetur adipiscing elit pellentesque labore et dolore incididunt
+            ut labore.
+          </p>
+        </article>
+
+        <article class="blog__entry">
+          <img src="img/image-4.jpg" />
+          <div>
+            <h3>HackerYou Tech Test</h3>
+            <h4>March 9, 2019</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet
+              consectetur adipiscing elit pellentesque labore et dolore
+              incididunt ut labore. Amet consectetur adipiscing elit
+              pellentesque labore et dolore incididunt ut labore.
+            </p>
+          </div>
+        </article>
+
+        <article class="blog__entry">
+          <img src="img/image-5.jpg" />
+          <div class="blog__content">
+            <h3>HackerYou Tech Test</h3>
+            <h4>March 9, 2019</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet
+              consectetur adipiscing elit pellentesque labore et dolore
+              incididunt ut labore.
+            </p>
+          </div>
+        </article>
       </div>
     </section>
 
