Fix alternative text

--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,11 @@
 
     <!-- Google Fonts -->
     <link
-      href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900&display=swap"
+      href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,800&display=swap"
       rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css?family=Noto+Serif:400,700&display=swap"
+      href="https://fonts.googleapis.com/css?family=Noto+Serif:400&display=swap"
       rel="stylesheet"
     />
 
@@ -25,13 +25,13 @@
       rel="stylesheet"
     />
 
-    <title>hackeryou-tech-challenge-2019</title>
+    <title>HackerYou - Blog</title>
   </head>
   <body>
     <noscript>
       <strong
-        >We're sorry but hackeryou-tech-challenge-2019 doesn't work properly
-        without JavaScript enabled. Please enable it to continue.</strong
+        >We're sorry but HackerYou - Blog doesn't work properly without
+        JavaScript enabled. Please enable it to continue.</strong
       >
     </noscript>
     <div id="app"></div>
