Refactor folder structure based on HackerYou student portfolios

--- a/refactor/index.html
+++ b/refactor/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link rel="icon" href="favicon.ico" />
-    <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="styles/normalize.css" />
+    <link rel="stylesheet" href="styles/styles.css" />
 
     <!-- Google Fonts -->
     <link
@@ -91,7 +91,7 @@
             <div class="blog__entry">
               <img
                 class="blog__image"
-                src="img/image-2.jpg"
+                src="assets/image-2.jpg"
                 alt="blog.blog_image_alternative_text"
               />
               <article class="blog__content">
@@ -108,7 +108,7 @@
             <div class="blog__entry">
               <img
                 class="blog__image"
-                src="img/image-3.jpg"
+                src="assets/image-3.jpg"
                 alt="blog.blog_image_alternative_text"
               />
               <article class="blog__content">
@@ -125,7 +125,7 @@
             <div class="blog__entry">
               <img
                 class="blog__image"
-                src="img/image-5.jpg"
+                src="assets/image-5.jpg"
                 alt="blog.blog_image_alternative_text"
               />
               <article class="blog__content">
@@ -149,7 +149,7 @@
             <div class="blog__entry">
               <img
                 class="blog__image"
-                src="img/image-4.jpg"
+                src="assets/image-4.jpg"
                 alt="spotlight.blog_image_alternative_text"
               />
               <article class="blog__content">
@@ -178,7 +178,7 @@
             <div class="blog__entry blog__entry--related">
               <img
                 class="blog__image"
-                src="img/image-6.jpg"
+                src="assets/image-6.jpg"
                 alt="related.blog_alternative_text"
               />
               <article class="blog__content">
@@ -198,7 +198,7 @@
             <div class="blog__entry blog__entry--related">
               <img
                 class="blog__image"
-                src="img/image-7.jpg"
+                src="assets/image-7.jpg"
                 alt="related.blog_alternative_text"
               />
               <article class="blog__content">
@@ -218,7 +218,7 @@
             <div class="blog__entry blog__entry--related">
               <img
                 class="blog__image"
-                src="img/image-8.jpg"
+                src="assets/image-8.jpg"
                 alt="related.blog_alternative_text"
               />
               <article class="blog__content">
