--- a/refactor/index.html
+++ b/refactor/index.html
@@ -92,7 +92,7 @@
       </section>
 
       <section class="blog">
-        <div class="header">
+        <div class="section-title">
           <h2>Blog</h2>
         </div>
         <div class="wrapper">
@@ -179,7 +179,7 @@
       </section>
 
       <section class="related-posts">
-        <div class="header">
+        <div class="section-title">
           <h2>Related Posts</h2>
         </div>
         <div class="wrapper">
@@ -293,7 +293,7 @@
             consectetur adipiscing elit.
           </p>
           <div class="footer__newsletter--subscribe">
-            <label for="email" class="hide">Enter your email</label>
+            <label for="email" class="sr-only">Enter your email</label>
             <input type="email" id="email" placeholder="email address" />
             <button accesskey="s">Subscribe</button>
           </div>
