Fix img alt texts and remove unnecessary font weights

--- a/refactor/index.html
+++ b/refactor/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js" lang="en">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <title>HackerYou - Home</title>
@@ -8,10 +8,9 @@
 
     <link rel="icon" href="favicon.ico" />
 
-    <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="styles/styles.css" />
     <link
-      href="https://fonts.googleapis.com/css?family=Raleway:500,700,800&display=swap"
+      href="https://fonts.googleapis.com/css?family=Raleway:200,500,600,700,800&display=swap"
       rel="stylesheet"
     />
     <link
@@ -90,7 +89,7 @@
               <img
                 class="blog__image"
                 src="assets/image-2.jpg"
-                alt="blog.blog_image_alternative_text"
+                alt="Three HackerYou community members wearing jean button up shirts posing"
               />
               <article class="blog__content">
                 <h3 class="blog__content--title">HackerYou Tech Test</h3>
@@ -107,7 +106,7 @@
               <img
                 class="blog__image"
                 src="assets/image-3.jpg"
-                alt="blog.blog_image_alternative_text"
+                alt="A coding bootcamp instructor looking at a student's work"
               />
               <article class="blog__content">
                 <h3 class="blog__content--title">HackerYou Tech Test</h3>
@@ -124,7 +123,7 @@
               <img
                 class="blog__image"
                 src="assets/image-5.jpg"
-                alt="blog.blog_image_alternative_text"
+                alt="Two coding bootcamp students programming on their laptops"
               />
               <article class="blog__content">
                 <h3 class="blog__content--title">HackerYou Tech Test</h3>
@@ -148,7 +147,7 @@
               <img
                 class="blog__image"
                 src="assets/image-4.jpg"
-                alt="spotlight.blog_image_alternative_text"
+                alt="Coding bootcamp instructor teaching in front of a class"
               />
               <article class="blog__content">
                 <h3 class="blog__content--title">About Us</h3>
@@ -177,7 +176,7 @@
               <img
                 class="blog__image"
                 src="assets/image-6.jpg"
-                alt="related.blog_alternative_text"
+                alt="HackerYou community members enjoying salad for lunch"
               />
               <article class="blog__content">
                 <h3 class="blog__content--title">HackerYou Tech Test</h3>
@@ -197,7 +196,7 @@
               <img
                 class="blog__image"
                 src="assets/image-7.jpg"
-                alt="related.blog_alternative_text"
+                alt="Coding bootcamp students programming on their laptops"
               />
               <article class="blog__content">
                 <h3 class="blog__content--title">HackerYou Tech Test</h3>
@@ -217,7 +216,7 @@
               <img
                 class="blog__image"
                 src="assets/image-8.jpg"
-                alt="related.blog_alternative_text"
+                alt="Coding bootcamp students following lesson in class"
               />
               <article class="blog__content">
                 <h3 class="blog__content--title">HackerYou Tech Test</h3>
